--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="background">
     <div class="popup">
       <div class="left">
-        <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/sepatu.png?raw=true" alt="sepatu" />
+        <img src="sepatu.png" alt="sepatu" />
         <h2>Stay in the know</h2>
       </div>
       <div class="right">
