--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="background">
     <div class="popup">
       <div class="left">
-        <img src="sepatu.png" alt="sepatu" />
+        <img src="Logo UNWIKU.jpg" alt="Logo UNWIKU" />
         <h2>Stay in the know</h2>
       </div>
       <div class="right">
