--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ETQ Newsletter Popup</title>
+  <title>Daftar Nilai Praktikum</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <h2>Stay in the know</h2>
       </div>
       <div class="right">
-        <h3>Join our newsletter and receive 10% off your first order.</h3>
+        <h3>Nilai Praktikum Pemrograman Lanjut 2025</h3>
         <form action="html.html" method="get">
           <input type="email" placeholder="Email" required>
           <select required>
