--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="background">
     <div class="popup">
       <div class="left">
-        <img src="Logo UNWIKU.jpg" alt="Logo UNWIKU" />
+        <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/Logo%20UNWIKU.jpg?raw=true" alt="Logo UNWIKU" />
         <h2>Stay in the know</h2>
       </div>
       <div class="right">
