--- a/html.html
+++ b/html.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thank You</title>
+  <title>Tabel Nilai Praktikum</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="thankyou">
-    <h1>Thank you for subscribing!</h1>
-    <p>You’ve received 10% off on your first order.</p>
-    <a href="index.html">Back to home</a>
+  <div class="container">
+    <h1>Hasil Nilai Praktikum Pemrograman Lanjut</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>Nama Mahasiswa</th>
+          <th>NIM</th>
+          <th>Modul 1</th>
+          <th>Modul 2</th>
+          <th>Modul 3</th>
+          <th>Rata-rata</th>
+          <th>Grade</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Andi Saputra</td>
+          <td>210501001</td>
+          <td>85</td>
+          <td>88</td>
+          <td>90</td>
+          <td>87.7</td>
+          <td>A</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Budi Hartono</td>
+          <td>210501002</td>
+          <td>75</td>
+          <td>70</td>
+          <td>78</td>
+          <td>74.3</td>
+          <td>B</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Citra Ayu</td>
+          <td>210501003</td>
+          <td>90</td>
+          <td>92</td>
+          <td>95</td>
+          <td>92.3</td>
+          <td>A</td>
+        </tr>
+      </tbody>
+    </table>
+    <a href="index.html">Kembali ke Beranda</a>
   </div>
 </body>
 </html>
