--- a/html.html
+++ b/html.html
@@ -14,45 +14,43 @@
         <tr>
           <th>No</th>
           <th>Nama Mahasiswa</th>
-          <th>NIM</th>
-          <th>Modul 1</th>
-          <th>Modul 2</th>
-          <th>Modul 3</th>
-          <th>Rata-rata</th>
+          <th>NPM</th>
+          <th>Job 1</th>
+          <th>Job 2</th>
+          <th>Job 3</th>
+          <th>Nilai Akhir</th>
           <th>Grade</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>1</td>
-          <td>Andi Saputra</td>
-          <td>210501001</td>
-          <td>85</td>
-          <td>88</td>
-          <td>90</td>
-          <td>87.7</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Budi Hartono</td>
-          <td>210501002</td>
-          <td>75</td>
-          <td>70</td>
-          <td>78</td>
-          <td>74.3</td>
-          <td>B</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Citra Ayu</td>
-          <td>210501003</td>
-          <td>90</td>
-          <td>92</td>
-          <td>95</td>
-          <td>92.3</td>
-          <td>A</td>
-        </tr>
+        <tr><td>1</td><td>PRAYITNO</td><td>22410300525</td><td>82</td><td>83</td><td>82</td><td>82.33</td><td>B</td></tr>
+        <tr><td>2</td><td>SIBYANUL MUZAKI</td><td>22410300526</td><td>90</td><td>89</td><td>87</td><td>87.16</td><td>A</td></tr>
+        <tr><td>3</td><td>DWI AKHMAD NUR SALADIN</td><td>22410300527</td><td>88</td><td>90</td><td>87</td><td>87.33</td><td>A</td></tr>
+        <tr><td>4</td><td>ZIDQI MAULUDDIN</td><td>22410300528</td><td>90</td><td>85</td><td>75</td><td>80.33</td><td>B</td></tr>
+        <tr><td>5</td><td>DISTA ASATYANINGSIH</td><td>22410300529</td><td>85</td><td>80</td><td>75</td><td>80.00</td><td>B</td></tr>
+        <tr><td>6</td><td>RIZKI APRILIANO</td><td>22410300530</td><td>85</td><td>90</td><td>88</td><td>86.00</td><td>A</td></tr>
+        <tr><td>7</td><td>AKROM SIKKIN ALMATASANI</td><td>22410300531</td><td>90</td><td>85</td><td>79</td><td>83.33</td><td>B</td></tr>
+        <tr><td>8</td><td>AHMAD SYIFUALLAH AL MAHALI</td><td>22410300532</td><td>85</td><td>90</td><td>79</td><td>83.00</td><td>B</td></tr>
+        <tr><td>9</td><td>RISKI AJI PRASETYO</td><td>22410300533</td><td>90</td><td>90</td><td>80</td><td>84.33</td><td>A</td></tr>
+        <tr><td>10</td><td>SEVRIANSAH</td><td>22410300536</td><td>85</td><td>80</td><td>85</td><td>83.33</td><td>B</td></tr>
+        <tr><td>11</td><td>AYU DWI SEPTIANA</td><td>22410300537</td><td>90</td><td>85</td><td>90</td><td>88.33</td><td>A</td></tr>
+        <tr><td>12</td><td>MAS FATAH</td><td>22410300538</td><td>85</td><td>87</td><td>60</td><td>70.66</td><td>C</td></tr>
+        <tr><td>13</td><td>GANNESSA ERGA SANDY PRADAN</td><td>22410300539</td><td>85</td><td>87</td><td>84</td><td>85.33</td><td>A</td></tr>
+        <tr><td>14</td><td>MAD SAKIN ARDILIN</td><td>22410300543</td><td>85</td><td>84</td><td>60</td><td>75.00</td><td>B</td></tr>
+        <tr><td>15</td><td>CAHYA TRI AIZZANI</td><td>22410300544</td><td>90</td><td>90</td><td>60</td><td>80.00</td><td>B</td></tr>
+        <tr><td>16</td><td>ELSYAH KAUTSAR</td><td>22410300545</td><td>85</td><td>85</td><td>85</td><td>85.00</td><td>A</td></tr>
+        <tr><td>17</td><td>RIZQI DAFFA PRATAMA</td><td>22410300546</td><td>87</td><td>87</td><td>75</td><td>83.00</td><td>B</td></tr>
+        <tr><td>18</td><td>INDRA ZACKY PRATAMA</td><td>22410300547</td><td>87</td><td>87</td><td>75</td><td>83.00</td><td>B</td></tr>
+        <tr><td>19</td><td>AGUS DIAN SAPUTRA</td><td>22410300548</td><td>90</td><td>90</td><td>80</td><td>86.66</td><td>A</td></tr>
+        <tr><td>20</td><td>ISA HASANDA</td><td>22410300549</td><td>85</td><td>90</td><td>80</td><td>85.00</td><td>A</td></tr>
+        <tr><td>21</td><td>KHAID QUROTUL BAHRI</td><td>22410300550</td><td>85</td><td>90</td><td>80</td><td>85.00</td><td>A</td></tr>
+        <tr><td>22</td><td>ZAENAL REZA SAPUTRA</td><td>22410300551</td><td>90</td><td>90</td><td>80</td><td>86.66</td><td>A</td></tr>
+        <tr><td>23</td><td>BAGUS TRI PANGESTU</td><td>22410300552</td><td>85</td><td>90</td><td>80</td><td>85.00</td><td>A</td></tr>
+        <tr><td>24</td><td>FAIZ BACHTIAR</td><td>22410300553</td><td>90</td><td>90</td><td>85</td><td>88.33</td><td>A</td></tr>
+        <tr><td>25</td><td>FADHLULLAH NURFAUZI</td><td>22410300554</td><td>90</td><td>90</td><td>80</td><td>86.66</td><td>A</td></tr>
+        <tr><td>26</td><td>ANDIKA RIZKY PRASETYA</td><td>22410300555</td><td>85</td><td>85</td><td>85</td><td>85.00</td><td>A</td></tr>
+        <tr><td>27</td><td>AMIZUL LAMTIF RAMADHAN</td><td>22410300556</td><td>85</td><td>90</td><td>80</td><td>85.00</td><td>A</td></tr>
+        <tr><td>28</td><td>FAUZI IRMAN MAUNALA</td><td>22410300558</td><td>80</td><td>70</td><td>65</td><td>71.66</td><td>C</td></tr>
       </tbody>
     </table>
     <a href="index.html">Kembali ke Beranda</a>
