--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daftar Nilai Praktikum</title>
+  <title>Daftar Inventaris Lboratorium Teknik Elektro UNWIKU</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/Logo%20UNWIKU.jpg?raw=true" alt="Logo UNWIKU" />
       </div>
       <div class="right">
-        <h3>Nilai Praktikum Pemrograman Lanjut 2025</h3>
+        <h3>Inventari LAB. Elektro UNWIKU</h3>
         <form action="html.html" method="get">
           <input type="email" placeholder="Email" required>
           <select required>
