--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/Logo%20UNWIKU.jpg?raw=true" alt="Logo UNWIKU" />
       </div>
       <div class="right">
-        <h3>Inventari LAB. Elektro UNWIKU</h3>
+        <h3>Inventaris LAB. Elektro UNWIKU</h3>
         <form action="html.html" method="get">
           <input type="email" placeholder="Email" required>
           <select required>
