--- a/html.html
+++ b/html.html
@@ -12,7 +12,7 @@
     <div class="inventaris-grid">
 
       <div class="item">
-        <img src="img/multimeter.jpg" alt="Multimeter Digital">
+        <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/Multimeter.jpeg?raw=true" alt="Multimeter Digital">
         <h3>Multimeter Digital</h3>
         <p>Kode: LAB-ELEC-001<br>Jumlah: 10<br>Kondisi: Baik<br>Lokasi: Rak A1</p>
       </div>
