--- a/html.html
+++ b/html.html
@@ -9,45 +9,18 @@
 <body>
   <div class="container">
     <h1>Daftar Inventaris Laboratorium</h1>
-    <div class="inventaris-grid">
 
-      <div class="item">
-        <img src="https://github.com/isahsnda/Tugas_PemrogramanLanjut/blob/main/Multimeter.jpeg?raw=true" alt="Multimeter Digital">
-        <h3>Multimeter Digital</h3>
-        <p>Kode: LAB-ELEC-001<br>Jumlah: 10<br>Kondisi: Baik<br>Lokasi: Rak A1</p>
-      </div>
-
-      <div class="item">
-        <img src="img/oscilloscope.jpg" alt="Oscilloscope">
-        <h3>Oscilloscope</h3>
-        <p>Kode: LAB-ELEC-002<br>Jumlah: 5<br>Kondisi: Baik<br>Lokasi: Meja Praktikum 1</p>
-      </div>
-
-      <div class="item">
-        <img src="img/power_supply.jpg" alt="Power Supply DC">
-        <h3>Power Supply DC</h3>
-        <p>Kode: LAB-ELEC-003<br>Jumlah: 7<br>Kondisi: Baik<br>Lokasi: Rak A2</p>
-      </div>
-
-      <div class="item">
-        <img src="img/function_generator.jpg" alt="Function Generator">
-        <h3>Function Generator</h3>
-        <p>Kode: LAB-ELEC-004<br>Jumlah: 3<br>Kondisi: Rusak Ringan<br>Lokasi: Meja Praktikum 2</p>
-      </div>
-
-      <div class="item">
-        <img src="img/breadboard.jpg" alt="Breadboard">
-        <h3>Breadboard</h3>
-        <p>Kode: LAB-ELEC-005<br>Jumlah: 20<br>Kondisi: Baik<br>Lokasi: Laci Alat</p>
-      </div>
-
-      <div class="item">
-        <img src="img/esp32.jpg" alt="ESP32 Module">
-        <h3>ESP32 Module</h3>
-        <p>Kode: LAB-IOT-001<br>Jumlah: 15<br>Kondisi: Baik<br>Lokasi: Box Komponen</p>
-      </div>
-
+    <div class="item">
+      <img src="img/multimeter.png" alt="Multimeter Digital">
+      <h3>Multimeter Digital</h3>
+      <p>
+        <strong>Kode:</strong> LAB-ELEC-001<br>
+        <strong>Jumlah:</strong> 10<br>
+        <strong>Kondisi:</strong> Baik<br>
+        <strong>Lokasi:</strong> Rak A1
+      </p>
     </div>
+
   </div>
 </body>
 </html>
