--- a/html.html
+++ b/html.html
@@ -11,7 +11,7 @@
     <h1>Daftar Inventaris Laboratorium</h1>
 
     <div class="item">
-      <img src="img/multimeter.png" alt="Multimeter Digital">
+      <img src="Multimeter.jpeg" alt="Multimeter Digital">
       <h3>Multimeter Digital</h3>
       <p>
         <strong>Kode:</strong> LAB-ELEC-001<br>
