--- a/html.html
+++ b/html.html
@@ -4,7 +4,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inventaris Lab</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Reset dasar */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+      color: #333;
+    }
+
+    .item {
+      background-color: #fff;
+      padding: 20px;
+      border: 2px solid #ddd;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      display: inline-block;
+      text-align: center;
+    }
+
+    .item img {
+      width: 300px;
+      height: auto;
+      object-fit: cover;
+      border: 4px solid #444;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+
+    .item h3 {
+      color: #222;
+      margin-bottom: 10px;
+    }
+
+    .item p {
+      color: #555;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
