--- a/html.html
+++ b/html.html
@@ -18,7 +18,7 @@
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 0 auto;
       text-align: center;
     }
@@ -92,6 +92,18 @@
           <strong>Jumlah:</strong> 5<br>
           <strong>Kondisi:</strong> Baik<br>
           <strong>Lokasi:</strong> Rak B2
+        </p>
+      </div>
+
+      <!-- Environment Meter -->
+      <div class="item">
+        <img src="EnvironmentMeter.jpeg" alt="Environment Meter">
+        <h3>Environment Meter</h3>
+        <p>
+          <strong>Kode:</strong> LAB-ELEC-003<br>
+          <strong>Jumlah:</strong> 7<br>
+          <strong>Kondisi:</strong> Baik<br>
+          <strong>Lokasi:</strong> Rak C3
         </p>
       </div>
     </div>
