--- a/html.html
+++ b/html.html
@@ -106,6 +106,18 @@
           <strong>Lokasi:</strong> Rak C3
         </p>
       </div>
+
+      <!-- Earth Tester -->
+      <div class="item">
+        <img src="EarthMeter.jpeg" alt="Earth Tester">
+        <h3>Earth Tester</h3>
+        <p>
+          <strong>Kode:</strong> LAB-ELEC-004<br>
+          <strong>Jumlah:</strong> 3<br>
+          <strong>Kondisi:</strong> Baik<br>
+          <strong>Lokasi:</strong> Rak D1
+        </p>
+      </div>
     </div>
 
   </div>
