--- a/html.html
+++ b/html.html
@@ -109,7 +109,7 @@
 
       <!-- Earth Tester -->
       <div class="item">
-        <img src="EarthMeter.jpeg" alt="Earth Tester">
+        <img src="earthmeter.jpeg" alt="Earth Tester">
         <h3>Earth Tester</h3>
         <p>
           <strong>Kode:</strong> LAB-ELEC-004<br>
