--- a/html.html
+++ b/html.html
@@ -109,7 +109,7 @@
 
       <!-- Earth Tester -->
       <div class="item">
-        <img src="earthmeter.jpeg" alt="Earth Tester">
+        <img src="EarthMeter.jpeg" alt="Earth Tester">
         <h3>Earth Tester</h3>
         <p>
           <strong>Kode:</strong> LAB-ELEC-004<br>
@@ -118,8 +118,32 @@
           <strong>Lokasi:</strong> Rak D1
         </p>
       </div>
-    </div>
 
+      <!-- Project Board -->
+      <div class="item">
+        <img src="Projectboard.jpeg" alt="Project Board">
+        <h3>Project Board</h3>
+        <p>
+          <strong>Kode:</strong> LAB-ELEC-005<br>
+          <strong>Jumlah:</strong> 15<br>
+          <strong>Kondisi:</strong> Baik<br>
+          <strong>Lokasi:</strong> Rak E1
+        </p>
+      </div>
+
+      <!-- Basic Digital Trainer -->
+      <div class="item">
+        <img src="Basicdigitaltrainer.jpeg" alt="Basic Digital Trainer">
+        <h3>Basic Digital Trainer</h3>
+        <p>
+          <strong>Kode:</strong> LAB-ELEC-006<br>
+          <strong>Jumlah:</strong> 8<br>
+          <strong>Kondisi:</strong> Baik<br>
+          <strong>Lokasi:</strong> Rak F1
+        </p>
+      </div>
+
+    </div>
   </div>
 </body>
 </html>
